--- a/static/css/style.css
+++ b/static/css/style.css
@@ -142,7 +142,7 @@ p {
 
 .nav-item > a {
   display: block;
-  padding: 16px 18px;
+  padding: 5px 9px;
   text-decoration: none;
   color: var(--ink);
   font-size: 0.85rem;
@@ -232,7 +232,7 @@ p {
 .content {
   flex: 1;
   width: 100%;
-  max-width: 1280px;
+  /* max-width: 1280px; */
   margin: 48px auto 64px;
   padding: 0 32px 48px;
   box-sizing: border-box;
