--- a/templates/report/operator/index.html
+++ b/templates/report/operator/index.html
@@ -8,7 +8,8 @@
 <body>
     {% if show_cover %}
         {% include 'report/operator/cover.html' %}
-    {% elif show_summary %}
+    {% endif %}
+    {% if show_summary %}
         {% include 'report/operator_summary_toc.html' %}
     {% endif %}
     {% include 'report/operator/operator_daily.html' %}
