Remove macOS PDF fallback and document platform support

--- a/templates/integrated_report.html
+++ b/templates/integrated_report.html
@@ -94,6 +94,7 @@
   <button id="download-report">Download</button>
   <span class="spinner" id="download-spinner" hidden></span>
   <button id="email-report">Email Report</button>
+  <p class="pdf-host-warning">PDF generation requires a Linux or Windows host. macOS is not supported.</p>
 </div>
 {% endblock %}
 
