--- a/templates/ppm_analysis.html
+++ b/templates/ppm_analysis.html
@@ -197,6 +197,7 @@
         <span class="spinner" id="download-spinner" hidden></span>
         <button type="button" id="copy-image">Copy Image</button>
       </div>
+      <p class="pdf-host-warning">PDF generation requires a Linux or Windows host. macOS is not supported.</p>
       <div class="preview-card" style="height: 300px;">
         <canvas id="ppmChart"></canvas>
       </div>
