Added/ updated styling within the navbar and home tab.

--- a/templates/analysis_tracker_logs.html
+++ b/templates/analysis_tracker_logs.html
@@ -527,7 +527,7 @@
               Session limit
               <input type="number" min="10" max="250" step="10" name="limit" value="{{ filters.limit }}">
             </label>
-            <div>
+            <div style="display: flex; justify-content: space-between;">
               <button type="submit">Apply filters</button>
               <button type="submit" name="reset" value="1" class="secondary" formnovalidate>Reset</button>
             </div>
