--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Welcome to MOAA</h1>
+<h1>Previews</h1>
+<h3><i>(click to see further insight)</i></h3>
 <section class="dashboard-grid">
   <a class="dashboard-link" href="{{ url_for('main.ppm_analysis') }}">
     <div class="dashboard-card">
