--- a/templates/report/aoi_daily/index.html
+++ b/templates/report/aoi_daily/index.html
@@ -7,17 +7,18 @@
     <style>{{ report_css|safe }}</style>
 </head>
 <body>
-    {% if show_cover %}
-        {% include 'report/aoi_daily/cover.html' %}
-    {% endif %}
+    <main class="report-page">
+        {% if show_cover %}
+            {% include 'report/aoi_daily/cover.html' %}
+        {% endif %}
 
-    {% include 'report/aoi_daily/summary_toc.html' %}
+        {% include 'report/aoi_daily/summary_toc.html' %}
 
-    {% include 'report/aoi_daily/shift_summary.html' %}
-    {% for asm in assemblies %}
-        {% include 'report/aoi_daily/assembly_detail.html' %}
-    {% endfor %}
-    {% include 'report/aoi_daily/assembly_history.html' %}
+        {% include 'report/aoi_daily/shift_summary.html' %}
+        {% for asm in assemblies %}
+            {% include 'report/aoi_daily/assembly_detail.html' %}
+        {% endfor %}
+        {% include 'report/aoi_daily/assembly_history.html' %}
+    </main>
 </body>
 </html>
-
