--- a/templates/report/operator/index.html
+++ b/templates/report/operator/index.html
@@ -7,13 +7,15 @@
     <style>{{ report_css|safe }}</style>
 </head>
 <body>
-    {% if show_cover %}
-        {% include 'report/operator/cover.html' %}
-    {% endif %}
-    {% if show_summary %}
-        {% include 'report/operator_summary_toc.html' %}
-    {% endif %}
-    {% include 'report/operator/operator_daily.html' %}
-    {% include 'report/operator/operator_assemblies.html' %}
+    <main class="report-page">
+        {% if show_cover %}
+            {% include 'report/operator/cover.html' %}
+        {% endif %}
+        {% if show_summary %}
+            {% include 'report/operator_summary_toc.html' %}
+        {% endif %}
+        {% include 'report/operator/operator_daily.html' %}
+        {% include 'report/operator/operator_assemblies.html' %}
+    </main>
 </body>
 </html>
